--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
