--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "immer": "^9.0.15",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -16,6 +17,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
