--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -18,6 +17,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
